--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,21 @@
-<app-root></app-root>
-<app-root></app-root>
-<app-mon-premier></app-mon-premier>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <h2>Mes appareils</h2>
+      <ul class="list-group">
+        <app-appareil
+          *ngFor="let appareil of appareils"
+          [appareilName]="appareil.name"
+          [appareilStatus]="appareil.status"
+        ></app-appareil>
+      </ul>
+      <button
+        class="btn btn-success"
+        [disabled]="!isAuth"
+        (click)="onAllumer()"
+      >
+        Tout allumer
+      </button>
+    </div>
+  </div>
+</div>
