Modifier les données en temps réel avec les Pipes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <div class="row">
     <div class="col-xs-12">
       <h2>Mes appareils</h2>
+      <p>Mis à jour le {{ lastUpdate | async | date: "dd/MM/yyyy à hh:mm" }}</p>
       <ul class="list-group">
         <app-appareil
           *ngFor="let appareil of appareils"
