--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,17 +5,17 @@
       <p>Mis à jour le {{ lastUpdate | async | date: "dd/MM/yyyy à hh:mm" }}</p>
       <ul class="list-group">
         <app-appareil
-          *ngFor="let appareil of appareils"
+          *ngFor="let appareil of appareils; let i = index"
+          [indexOfAppareil]="i"
           [appareilName]="appareil.name"
           [appareilStatus]="appareil.status"
         ></app-appareil>
       </ul>
-      <button
-        class="btn btn-success"
-        [disabled]="!isAuth"
-        (click)="onAllumer()"
-      >
+      <button class="btn btn-success" (click)="onAllumer()">
         Tout allumer
+      </button>
+      <button class="btn btn-danger" (click)="onEteindre()">
+        Tout éteindre
       </button>
     </div>
   </div>
