--- a/src/app/appareil/appareil.component.html
+++ b/src/app/appareil/appareil.component.html
@@ -8,6 +8,7 @@
   <h4 [ngStyle]="{ color: getColor() }">
     Appareil : {{ appareilName }} -- Statut : {{ getStatus() }}
   </h4>
+  <a [routerLink]="[id]">Détails</a>
   <button
     class="btn btn-success"
     (click)="onSwitchOn()"
